--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+
+<header class="header-content">
+  <div class="logo-content">
+    <img src="../assets/address_book_logo.jpg" alt="Logo Image">
+    <div>
+      <span class="address-text header-content">ADDRESS</span>
+      <span class="address-text book">BOOK</span>
+    </div>
+  </div>
+</header>
+
