--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -1,1 +1,9 @@
+<app-header></app-header>
 
+<!-- header-content-->
+<div class="main-content">
+  <div class="header-content">
+    <div class="person-detail-text">Person Details</div>
+    <a class="add-button" routerLink="/add-user">
+      <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+  </div> 
