Added: Adding main table content in UI and add styling to it

--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -5,5 +5,38 @@
   <div class="header-content">
     <div class="person-detail-text">Person Details</div>
     <a class="add-button" routerLink="/add-user">
-      <img src="../assets/icons/add-24px.svg" alt="">Add User</a>
+      <img src="../assets/icons/add-24px.svg" alt="">Add Person</a>
   </div> 
+
+
+<!-- table-heading-->
+<div class="table-main">
+  <table id ="table-display" class="table">
+    <tr>
+      <th>Fullname</th>
+      <th>Address</th>
+      <th>City</th>
+      <th>State</th>
+      <th>Zip Code</th>
+      <th>Phone Number</th>
+      <th></th>
+  </tr>
+  
+  <!-- table-content-->
+  <tr>
+    <td>Roshni Mali</td>
+    <td>House No 14/ Bagarwara, Nathdwara</td>
+    <td>Udaipur</td>
+    <td>Rajasthan</td>
+    <td>143442</td>
+    <td>9898989898</td>
+    <td>
+        <img id=1 src="../assets/icons/delete-black-18dp.svg" alt="delete">
+        &nbsp;
+        <img id=1 src="../assets/icons/create-black-18dp.svg" alt="edit"> 
+    </td>
+</tr>
+  </table>
+
+</div>
+</div>
