--- a/src/app/component/home-page/home-page.component.scss
+++ b/src/app/component/home-page/home-page.component.scss
@@ -5,6 +5,8 @@
   background-color: #f7f7f7;
   padding:30px 0 10px;
   box-sizing:border-box;
+  font-family: 'Roboto', sans-serif;
+  color: #658292;
 
   .header-content {
     display: flex;
@@ -14,10 +16,12 @@
     width: 80%;
     margin: 0 auto;
     padding-bottom: 25px;
+    font-family: 'Roboto', sans-serif;
   }
 
   .person-detail-text {
     font: normal normal bold 28px/25px Roboto;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0px;
     color: #42515f;
     opacity: 1;
@@ -25,6 +29,7 @@
 
   .add-button {
     font: normal normal normal 22px/29px Roboto;
+    font-family: 'Roboto', sans-serif;
     letter-spacing: 0px;
     color: #ffffff;
     opacity: 1;
@@ -36,6 +41,63 @@
     cursor: pointer;
     text-decoration: none;
   }
+}
 
+.table-main {
+  width: 80%;
+  margin: 0 auto;
+  overflow: auto;
+}
 
+.table {
+  width: 100%;
+  border-collapse: seperate;
+  border-spacing: 0 15px;
+  min-width: 800px;
+}
+
+td, th {
+  text-align: left;
+  padding: 20px;
+}
+
+th {
+  text-align: left;
+  font: normal normal medium 18px/24px Roboto;
+  letter-spacing: 0px;
+  text-emphasis-color: #658292;
+  text-transform: capitalize;
+  opacity: 1;
+  border: 0px solid #dddddd;
+  font-family: 'Roboto', sans-serif;
+}
+
+tr:not(:first-child) {
+  background: #ffffff 0% 0% no-repeat padding-box;
+  border: 1px solid #E3E3E3;
+  border-radius: 3px;
+  // top: 285px;
+  // left: 188px;
+  // width: 1549px;
+  // height: 57px;
+  opacity: 1;
+}
+
+td {
+  font: normal normal normal 14px/21px;
+  letter-spacing: 0px;
+  opacity: 1;
+}
+
+td:first-child {
+  display: flex;
+  align-items: center;
+}
+
+td img:first-child {
+  margin-right: 10px;
+}
+
+td img {
+  cursor: pointer;
 }
