Added: adding service class to make REST Call to get the contact list from backend

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,7 +1,7 @@
 
 <header class="header-content">
   <div class="logo-content">
-    <img src="../assets/address_book_logo.jpg" alt="Logo Image">
+    <img src="../assets/images/addressbook.jpeg" alt="Logo Image">
     <div>
       <span class="address-text header-content">ADDRESS</span>
       <span class="address-text book">BOOK</span>
