--- a/src/app/component/home-page/home-page.component.scss
+++ b/src/app/component/home-page/home-page.component.scss
@@ -1,12 +1,13 @@
 .main-content {
   display:flex;
   flex-direction: column;
-  min-height:calc(100vh - 80px);
+  min-height: calc(100vh - 80px);
   background-color: #f7f7f7;
-  padding:30px 0 10px;
-  box-sizing:border-box;
+  padding: 30px 10px 50px;
+  box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
   color: #658292;
+  padding-bottom: 25px;
 
   .header-content {
     display: flex;
@@ -53,7 +54,7 @@
   width: 100%;
   border-collapse: seperate;
   border-spacing: 0 15px;
-  min-width: 800px;
+  min-width: 80px;
 }
 
 td, th {
@@ -88,6 +89,7 @@ td {
 td:first-child {
   display: flex;
   align-items: center;
+  padding-bottom: 25px;
 }
 
 td img:first-child {
