--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -26,7 +26,7 @@ html body {
 
 .logo-text-content {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .logo-content-img { border: solid 0px #42515f; }
@@ -37,6 +37,11 @@ html body {
   letter-spacing: 0px;
   color: #008CFF;
   text-transform: capitalize;
+  top: 32px;
+  left: 246px;
+  width: 112px;
+  height: 52px;
+  opacity: 1;
 }
 .book { color: #42515f; }
 * { box-sizing: border-box; }
