Added: Adding list of states to the form

--- a/src/app/component/add-user/add-user.component.html
+++ b/src/app/component/add-user/add-user.component.html
@@ -47,7 +47,36 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>State</mat-label>
-        <input class="name" matInput>
+        <mat-select>
+          <mat-option value="AndhraPradesh">Andhra Pradesh</mat-option>
+          <mat-option value="ArunachalPradesh">Arunachal Pradesh</mat-option>
+          <mat-option value="Assam">Assam</mat-option>
+          <mat-option value="Bihar">Bihar</mat-option>
+          <mat-option value="Chhattisgarh">Chhattisgarh</mat-option>
+          <mat-option value="Goa">Goa</mat-option>
+          <mat-option value="Gujarat">Gujarat</mat-option>
+          <mat-option value="Haryana">Haryana</mat-option>
+          <mat-option value="HimachalPradesh">Himachal Pradesh</mat-option>
+          <mat-option value="Jharkhand">Jharkhand</mat-option>
+          <mat-option value="Karnataka">Karnataka</mat-option>
+          <mat-option value="Kerala">Kerala</mat-option>
+          <mat-option value="MadhyaPradesh">Madhya Pradesh</mat-option>
+          <mat-option value="Maharashtra">Maharashtra</mat-option>
+          <mat-option value="Manipur">Manipur</mat-option>
+          <mat-option value="Meghalaya">Meghalaya</mat-option>
+          <mat-option value="Mizoram">Mizoram</mat-option>
+          <mat-option value="Nagaland">Nagaland</mat-option>
+          <mat-option value="Odisha">Odisha</mat-option>
+          <mat-option value="Punjab">Punjab</mat-option>
+          <mat-option value="Rajasthan">Rajasthan</mat-option>
+          <mat-option value="Sikkim">Sikkim</mat-option>
+          <mat-option value="TamilNadu">Tamil Nadu</mat-option>
+          <mat-option value="Telangana">Telangana</mat-option>
+          <mat-option value="Tripura">Tripura</mat-option>
+          <mat-option value="UttarPradesh">Uttar Pradesh</mat-option>
+          <mat-option value="Uttarakhand">Uttarakhand</mat-option>
+          <mat-option value="WestBengal">West Bengal</mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
 
