--- a/src/app/component/add-user/add-user.component.html
+++ b/src/app/component/add-user/add-user.component.html
@@ -3,7 +3,7 @@
 <!-- form-content-->
 <div class="form-content">
 
-  <form class="form" [formGroup]= "personFormGroup">
+  <form class="form" [formGroup]="personFormGroup" (ngSubmit)="onSubmit()">
     <!-- form-head-->
     <div class="form-head">PERSON ADDRESS FORM
       <a routerLink="/home-page" class="close-button">
@@ -15,7 +15,7 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Full Name</mat-label>
-        <input id="name" class="name" matInput>
+        <input class="input" matInput ngDefaultControl formControlName="fullName">
       </mat-form-field>
     </div>
 
@@ -23,7 +23,7 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Phone Number</mat-label> 
-        <input class="name" matInput>
+        <input class="input" matInput ngDefaultControl formControlName="phoneNumber">
       </mat-form-field>
     </div>
 
@@ -31,7 +31,7 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>Address</mat-label>
-        <input class="name" matInput>
+        <input class="input" matInput ngDefaultControl formControlName="address">
       </mat-form-field>
     </div>
 
@@ -39,7 +39,7 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline"> 
         <mat-label>City</mat-label>
-        <input class="name" matInput>
+        <input class="input" matInput ngDefaultControl formControlName="city">
       </mat-form-field>
     </div>
 
@@ -47,7 +47,8 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>State</mat-label>
-        <mat-select>
+        <input class="input" matInput ngDefaultControl formControlName="state">
+        <!-- <mat-select>
           <mat-option value="AndhraPradesh">Andhra Pradesh</mat-option>
           <mat-option value="ArunachalPradesh">Arunachal Pradesh</mat-option>
           <mat-option value="Assam">Assam</mat-option>
@@ -76,7 +77,7 @@
           <mat-option value="UttarPradesh">Uttar Pradesh</mat-option>
           <mat-option value="Uttarakhand">Uttarakhand</mat-option>
           <mat-option value="WestBengal">West Bengal</mat-option>
-        </mat-select>
+        </mat-select> -->
       </mat-form-field>
     </div>
 
@@ -84,15 +85,16 @@
     <div class="row-content">
       <mat-form-field class="example-full-width" appearance="outline">
         <mat-label>ZipCode</mat-label>
-        <input class="name" matInput>
+        <input class="input" matInput ngDefaultControl formControlName="zipNo">
       </mat-form-field>
     </div>
 
     <!-------Adding Add and Reset Button--------->
     <div class="buttonParent">
-      <a routerLink="/home-page">
-        <button mat-raised-button type="add" class="button" id="addButton">Add</button>
-      </a>
+      <!-- <a routerLink="/home-page">
+        <button mat-raised-button type="submit" class="button" id="addButton">Add</button>
+      </a> -->
+      <button mat-raised-button type="submit" class="button" id="addButton">Add</button>
       <div class="submit-reset">
         <button mat-raised-button type="reset" class="button">Reset</button>
       </div>
