Added: Adding data service to update the existing record of person and make the REST Call

--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -35,7 +35,7 @@
         <td>
           <img id={{person.id}} src="../assets/icons/delete-black-18dp.svg" alt="delete" (click)="remove(person.id)">
           &nbsp;
-          <img id={{person.id}} src="../assets/icons/create-black-18dp.svg" alt="edit">
+          <img id={{person.id}} src="../assets/icons/create-black-18dp.svg" alt="edit" (click)="update(person)">
         </td>
       </tr>
     </table>
