Added: Changes in header css style

--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -4,7 +4,7 @@
     <img src="../assets/images/addressbook.jpeg" alt="Logo Image">
     <div>
       <span class="address-text header-content">ADDRESS</span>
-      <span class="address-text book">BOOK</span>
+      <span class="address-text address-book">BOOK</span>
     </div>
   </div>
 </header>
