--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -4,7 +4,7 @@ html body {
 }
 
 .header {
-  padding: 15px 0;
+  padding: 30px 5px;
   background-color: #ffffff;
 }
 
@@ -26,10 +26,12 @@ html body {
 
 .logo-text-content {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
-.logo-content-img { border: solid 0px #42515f; }
+.logo-content-img { 
+  border: solid 0px #42515f;
+ }
 
 .address-text {
   font: normal normal bold 20px/25px Montserrat;
@@ -37,11 +39,9 @@ html body {
   letter-spacing: 0px;
   color: #008CFF;
   text-transform: capitalize;
-  top: 32px;
-  left: 246px;
-  width: 112px;
-  height: 52px;
-  opacity: 1;
+  padding-top: 20px;
 }
-.book { color: #42515f; }
+.address-book { 
+  color: #42515f;
+}
 * { box-sizing: border-box; }
