Added: Customized SnackBar Angular Material to display the message to user

--- a/src/app/component/home-page/home-page.component.html
+++ b/src/app/component/home-page/home-page.component.html
@@ -26,7 +26,7 @@
 
       <!-- table-content-->
       <tr *ngFor="let person of personDetails">
-        <td>{{person.fullname}}</td>
+        <td>{{person.fullName}}</td>
         <td>{{person.address}}</td>
         <td>{{person.city}}</td>
         <td>{{person.state}}</td>
