--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,11 +1,9 @@
-
-<header class="header-content">
+<header class="header-content header">
   <div class="logo-content">
-    <img src="../assets/images/addressbook.jpeg" alt="Logo Image">
-    <div>
-      <span class="address-text header-content">ADDRESS</span>
-      <span class="address-text address-book">BOOK</span>
-    </div>
+      <img src="../assets/images/addressbook.jpeg" alt="Logo Image">
+      <div class="logo-text-content">
+          <span class="address-text">Address</span>
+          <span class="address-text address-book">Book</span>
+      </div>
   </div>
 </header>
-
