--- a/src/app/component/header/header.component.scss
+++ b/src/app/component/header/header.component.scss
@@ -1,11 +1,6 @@
-html body {
-  margin: 0;
-  height: 100%;
-}
-
 .header {
-  padding: 30px 5px;
-  background-color: #ffffff;
+  padding: 15px 0;
+  background-color: white;
 }
 
 .header-content {
@@ -13,14 +8,13 @@ html body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  border: 0px solid blue;
+  border: 0px solid #0a71c5;
 }
-
 .logo-content {
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: 0px solid blue;
+  border: 0px solid #0a71c5;
   width: 80%;
 }
 
@@ -29,19 +23,14 @@ html body {
   flex-direction: column;
 }
 
-.logo-content-img { 
-  border: solid 0px #42515f;
- }
-
 .address-text {
   font: normal normal bold 20px/25px Montserrat;
   font-family: "Montserrat", sans-serif;
   letter-spacing: 0px;
-  color: #008CFF;
+  color: rgb(68, 133, 231);
   text-transform: capitalize;
-  padding-top: 20px;
 }
-.address-book { 
+
+.address-book {
   color: #42515f;
 }
-* { box-sizing: border-box; }
