--- a/src/app/component/add-user/add-user.component.html
+++ b/src/app/component/add-user/add-user.component.html
@@ -5,7 +5,8 @@
 
   <form class="form" [formGroup]="personFormGroup" (ngSubmit)="onSubmit()">
     <!-- form-head-->
-    <div class="form-head">PERSON ADDRESS FORM
+    <div class="form-head">
+      <span class="head">PERSON ADDRESS FORM</span>
       <a routerLink="/home-page" class="close-button">
         <img src="../assets/images/cancel.jpeg" alt="">
       </a>
@@ -13,91 +14,79 @@
 
     <!-------Input FullName--------->
     <div class="row-content">
+      <mat-label class="label text" for="name">Full Name</mat-label>
       <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Full Name</mat-label>
         <input class="input" matInput ngDefaultControl formControlName="fullName">
+        <mat-error *ngIf="checkError('fullName', 'required')">Name is required</mat-error>
+        <mat-error *ngIf="checkError('fullName', 'pattern')">Name should start with upper case and should have minimum of 3 characters</mat-error>
       </mat-form-field>
     </div>
 
     <!-------Input PhoneNumber--------->
-    <div class="row-content">
+    <div class="row-content-style">
+      <mat-label class="label text" for="phone">Phone Number</mat-label>
       <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Phone Number</mat-label> 
         <input class="input" matInput ngDefaultControl formControlName="phoneNumber">
+        <mat-error *ngIf="checkError('phoneNumber', 'required')">Phone Number is required</mat-error>
+        <mat-error *ngIf="checkError('phoneNumber', 'pattern')">Phone number should be start with digit between 6-9 and length should be equal to 10</mat-error>
       </mat-form-field>
     </div>
 
     <!-------Input Address--------->
-    <div class="row-content">
+    <div class="row-content-style">
+      <mat-label class="label text" for="address">Address</mat-label>
       <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>Address</mat-label>
-        <input class="input" matInput ngDefaultControl formControlName="address">
+        <textarea matInput class="input" style="height:80px" ngDefaultControl formControlName="address"></textarea>
+        <mat-error *ngIf="checkError('address', 'required')">Address is required</mat-error>
       </mat-form-field>
     </div>
 
-    <!-------Input City--------->
-    <div class="row-content">
-      <mat-form-field class="example-full-width" appearance="outline"> 
-        <mat-label>City</mat-label>
-        <input class="input" matInput ngDefaultControl formControlName="city">
-      </mat-form-field>
-    </div>
+    <div class="row-content-address">
+      <div class="city-container subAddress">
+        <!-------Input City--------->
+        <mat-label class="label text">City</mat-label>
+        <mat-form-field appearance="outline">
+          <mat-label class="label text">Select City</mat-label>
+          <mat-select ngDefaultControl formControlName="city">
+            <mat-option value="Mumbai">Mumbai</mat-option>
+            <mat-option value="Pune">Pune</mat-option>
+            <mat-option value="Udaipur">Udaipur</mat-option>
+            <mat-option value="Banglore">Banglore</mat-option>
+            <mat-option value="Chennai">Chennai</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-    <!-------Input State--------->
-    <div class="row-content">
-      <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>State</mat-label>
-        <input class="input" matInput ngDefaultControl formControlName="state">
-        <!-- <mat-select>
-          <mat-option value="AndhraPradesh">Andhra Pradesh</mat-option>
-          <mat-option value="ArunachalPradesh">Arunachal Pradesh</mat-option>
-          <mat-option value="Assam">Assam</mat-option>
-          <mat-option value="Bihar">Bihar</mat-option>
-          <mat-option value="Chhattisgarh">Chhattisgarh</mat-option>
-          <mat-option value="Goa">Goa</mat-option>
-          <mat-option value="Gujarat">Gujarat</mat-option>
-          <mat-option value="Haryana">Haryana</mat-option>
-          <mat-option value="HimachalPradesh">Himachal Pradesh</mat-option>
-          <mat-option value="Jharkhand">Jharkhand</mat-option>
-          <mat-option value="Karnataka">Karnataka</mat-option>
-          <mat-option value="Kerala">Kerala</mat-option>
-          <mat-option value="MadhyaPradesh">Madhya Pradesh</mat-option>
-          <mat-option value="Maharashtra">Maharashtra</mat-option>
-          <mat-option value="Manipur">Manipur</mat-option>
-          <mat-option value="Meghalaya">Meghalaya</mat-option>
-          <mat-option value="Mizoram">Mizoram</mat-option>
-          <mat-option value="Nagaland">Nagaland</mat-option>
-          <mat-option value="Odisha">Odisha</mat-option>
-          <mat-option value="Punjab">Punjab</mat-option>
-          <mat-option value="Rajasthan">Rajasthan</mat-option>
-          <mat-option value="Sikkim">Sikkim</mat-option>
-          <mat-option value="TamilNadu">Tamil Nadu</mat-option>
-          <mat-option value="Telangana">Telangana</mat-option>
-          <mat-option value="Tripura">Tripura</mat-option>
-          <mat-option value="UttarPradesh">Uttar Pradesh</mat-option>
-          <mat-option value="Uttarakhand">Uttarakhand</mat-option>
-          <mat-option value="WestBengal">West Bengal</mat-option>
-        </mat-select> -->
-      </mat-form-field>
-    </div>
+      <!-------Input State--------->
+      <div class="state-container subAddress">
+        <mat-label class="label text">State</mat-label>
+        <mat-form-field appearance="outline">
+          <mat-label class="label text">Select State</mat-label>
+          <mat-select ngDefaultControl formControlName="state">
+            <mat-option value="Karnataka">Karnataka</mat-option>
+            <mat-option value="Kerala">Kerala</mat-option>
+            <mat-option value="MadhyaPradesh">Madhya Pradesh</mat-option>
+            <mat-option value="Maharashtra">Maharashtra</mat-option>
+            <mat-option value="Rajasthan">Rajasthan</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
 
-    <!-------Input ZipCode--------->
-    <div class="row-content">
-      <mat-form-field class="example-full-width" appearance="outline">
-        <mat-label>ZipCode</mat-label>
-        <input class="input" matInput ngDefaultControl formControlName="zipNo">
-      </mat-form-field>
-    </div>
-
-    <!-------Adding Add and Reset Button--------->
-    <div class="buttonParent">
-      <!-- <a routerLink="/home-page">
-        <button mat-raised-button type="submit" class="button" id="addButton">Add</button>
-      </a> -->
-      <button mat-raised-button type="submit" class="button" id="addButton">Add</button>
-      <div class="submit-reset">
-        <button mat-raised-button type="reset" class="button">Reset</button>
+      <!-------Input ZipCode--------->
+      <div class="zip-container subAddress">
+        <mat-label class="label text">ZipCode</mat-label>
+        <mat-form-field class="example-full-width" appearance="outline">
+          <input matInput ngDefaultControl formControlName="zipNo">
+          <mat-error *ngIf="checkError('zipNo', 'required')">Zip Code is required</mat-error>
+          <mat-error *ngIf="checkError('zipNo', 'pattern')">Zip Code should be of 6 digits</mat-error>
+        </mat-form-field>
       </div>
     </div>
-
+      
+    <!-------Adding Add and Reset Button--------->
+    <div class="submit-reset">
+      <button mat-raised-button type="submit" class="button" id="addButton">Add</button>
+      <button mat-raised-button type="reset" class="button">Reset</button>
+    </div>
   </form>
+</div>
