--- a/src/app/component/add-user/add-user.component.scss
+++ b/src/app/component/add-user/add-user.component.scss
@@ -1,85 +1,127 @@
 .form-content {
   display: flex;
+  padding-top: 40px;
+  min-height: calc(100%-80px);
   background-color: #f7f7f7;
+  border: 0px solid blue;
   justify-content: center;
   align-items: center;
 }
 
 .form {
-  top: 173px;
-  left: 427px;
-  width: 1067px;
-  height: 803px;
+  width: 70%;
   background: #FFFFFF 0% 0% no-repeat padding-box;
-  box-shadow: 0px 0px 0px #00000029;
+  box-shadow: 0px 3px 6px #00000029;
   border: 1px solid #F5F5F5;
   border-radius: 8px;
-  border-top-width: 50px;
-  border-bottom-width: 50px;
+  opacity: 1;
 }
 
 .form-head {
-  display: flex;
   font: normal normal normal 28px/37px Roboto;
   background: #008CFF 0% 0% no-repeat padding-box;
   text-align: center;
   letter-spacing: 0px;
   color: #ffffff;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   padding-top: 30px;
   padding-bottom: 30px;
-  padding-left: 400px;
-  border-radius: 8px;
+  padding-left: 350px;
 }
 
 .close-button {
-  padding-left: 280px;
+  padding-left: 380px;
 }
 
 .row-content {
   display: flex;
-  flex-direction: row;
-  font: normal normal normal 18px/24px Roboto;
-  margin-bottom: 5px;
-  align-items: center;
-  text-align: center;
-  letter-spacing: 0px;
-  color: #42515F;
-  opacity: 1;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-top: 40px;
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
+.row-content-style {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 .example-full-width {
-  width: 75%;
-  align-items: center;
-  padding-left: 120px;
+  width: 100%;
 }
 
-.buttonParent {
+label {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+.text {
+  font-size: 16px;
+  color: #42515f;
+  opacity: 1;
+  font-family: Roboto;
+}
+
+.row-content-address {
   display: flex;
-  margin-bottom: 10px;
-  justify-content: space-between;
-  margin-top: 10px;
-  margin-left: 650px;
+  flex-direction: row;
+  margin-left: 100px;
   margin-right: 100px;
-  margin-bottom: 30px;
+}
+
+.subAddress {
+  display: flex;
+  flex-direction: column;
+}
+
+.city-container {
+  padding-right: 20px;
+}
+
+.zip-container {
+  padding-right: 20px;
+}
+
+.state-container {
+  padding-right: 20px;
+}
+
+.address {
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+}
+
+.submit-reset {
+  padding-left: 215px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 20px;
+  padding-right: 200px;
 }
 
 .button {
   font-size: 20px;
   font-family: Roboto;
   letter-spacing: 0px;
-  color: #707070;
   opacity: 1;
-  background: #f7f4f4;
-  border: none;
   font-weight: 400;
   min-width: 140px;
-  padding: 7px 50px;
-  border: 1px solid #707070;
+  padding: 7px 7px;
   cursor: pointer;
-  border-radius: 4px;
+  color: #42515F;
+  background: #E2E2E2 0% 0% no-repeat padding-box;
+  border: 1px solid #969696;
+  border-radius: 3px;
+  box-sizing: 5px, 5px, 5px, 5px;
+  margin: 0px 100px 0px 20px;
+  margin-inline: 10px;
 }
 
-.addButton {
-  border: 1px solid #969696;
-  background-color: #f5f5f5;
-}
